--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,11 +1,7 @@
-stages:
-  - trigger-script
-
 execute_python_on_issue_update:
   stage: trigger-script
   image: python:3.9
   script:
-    - pip install -r requirements.txt  # Installer les dépendances si nécessaire
-    - python issue_sync.py  # Exécuter ton script Python
+    - python scissue_sync.py "$CI_PROJECT_ID" "$CI_COMMIT_REF_NAME"
   rules:
     - if: '$CI_PIPELINE_SOURCE == "web"'
