--- a/.github/.gitlab-ci.yml
+++ b/.github/.gitlab-ci.yml
@@ -7,4 +7,4 @@ execute_python_on_issue_update:
     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
   rules:
     - if: '$CI_PIPELINE_SOURCE == "web"'
-    # - if: '$CI_COMMIT_BRANCH == "main"' # Spécifie la branche
+    - if: '$CI_COMMIT_BRANCH == "main"' # Spécifie la branche
