--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,12 +13,10 @@
 stages:
   - execute-script
 
-variables:
-  GIT_DEPTH: 0  # Récupérer tout l'historique du dépôt
-
 execute_python_on_issue_update:
   stage: execute-script
   script:
     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
   rules:
     - if: '$CI_PIPELINE_SOURCE == "web"'
+    - if: '$CI_COMMIT_BRANCH == "main"' # Spécifie la branche
