--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,20 +5,9 @@
      stage: execute-script
      script:
        - python3 /home/gitlab-runner/scripts-secures/script_issue.py
+       - python3 /home/gitlab-runner/scripts-secures/script_pr.py
      rules:
        - if: '$CI_PIPELINE_SOURCE == "web"'
 
 
 
-
-# stages:
-#   - execute-script
-
-# execute_python_on_issue_update:
-#   stage: execute-script
-#   script:
-#     - rm -rf /home/gitlab-runner/builds/t3_RZbBx6/0/ABDELJamil/ng-pokemon-app/
-#     - git clone --depth 50 https://your-git-repo-url.git /home/gitlab-runner/builds/t3_RZbBx6/0/ABDELJamil/ng-pokemon-app/
-#     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
-#   rules:
-#     - if: '$CI_PIPELINE_SOURCE == "web"'
