--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,7 +6,6 @@ execute_python_on_issue_update:
   script:
     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "web"'  # Déclenché par un webhook
-
+    - if: '$CI_PIPELINE_SOURCE == "web"' 
 
 
