--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -10,6 +10,28 @@
 
 
 
+# stages:
+#   - execute-script
+
+# execute_python_on_issue_update:
+#   stage: execute-script
+#   script:
+#     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE == "web"' 
+
+# execute_python_on_pr_update:
+#   stage: execute-script
+#   script:
+#     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'  # ou une autre condition selon votre besoin
+
+
+variables:
+  GIT_STRATEGY: clone
+  GIT_DEPTH: 0  # 0 pour un clone complet
+
 stages:
   - execute-script
 
@@ -25,4 +47,4 @@ execute_python_on_pr_update:
   script:
     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'  # ou une autre condition selon votre besoin
+    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
