update a file .gitlab-ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,12 +1,12 @@
-# stages:
-#   - execute-script
+ stages:
+   - execute-script
 
-# execute_python_on_issue_update:
-#   stage: execute-script
-#   script:
-#     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
-#   rules:
-#     - if: '$CI_PIPELINE_SOURCE == "web"' 
+ execute_python_on_issue_update:
+   stage: execute-script
+   script:
+     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
+   rules:
+     - if: '$CI_PIPELINE_SOURCE == "web"' 
 
 
 
@@ -28,23 +28,23 @@
 #     - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'  # ou une autre condition selon votre besoin
 
 
-variables:
-  GIT_STRATEGY: clone
-  GIT_DEPTH: 0  # 0 pour un clone complet
+# variables:
+#   GIT_STRATEGY: clone
+#   GIT_DEPTH: 0  # 0 pour un clone complet
 
-stages:
-  - execute-script
+# stages:
+#   - execute-script
 
-execute_python_on_issue_update:
-  stage: execute-script
-  script:
-    - python3 /home/gitlab-runner/scripts-secures/script_issue.py
-  rules:
-    - if: '$CI_PIPELINE_SOURCE == "web"' 
+# execute_python_on_issue_update:
+#   stage: execute-script
+#   script:
+#     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE == "web"' 
 
-execute_python_on_pr_update:
-  stage: execute-script
-  script:
-    - python3 /home/gitlab-runner/scripts-secures/script_pr.py
-  rules:
-    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
+# execute_python_on_pr_update:
+#   stage: execute-script
+#   script:
+#     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
