--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,16 +1,24 @@
-stages:
-  - execute-script
+  stages:
+    - execute-script
 
-execute_python_on_issue_update:
-  stage: execute-script
-  script:
-    - python3 /home/gitlab-runner/scripts-secures/script_issue.py
-  rules:
-    - if: '$CI_PIPELINE_SOURCE == "web"' 
+  execute_python_on_issue_update:
+    stage: execute-script
+    script:
+      - python3 /home/gitlab-runner/scripts-secures/script_issue.py
+    rules:
+      - if: '$CI_PIPELINE_SOURCE == "web"' 
 
-execute_python_on_pr_update:
-  stage: execute-script
-  script:
-    - python3 /home/gitlab-runner/scripts-secures/script_pr.py
-  rules:
-    - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'  # ou une autre condition selon votre besoin
+# include:
+#   - local: 'issue_update.yml'
+#   - local: 'pr_update.yml'
+
+
+ stages:
+   - execute-script
+
+ execute_python_on_pr_update:
+   stage: execute-script
+   script:
+     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
+   rules:
+     - if: '$CI_PIPELINE_SOURCE == "merge_request_event"'
