--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,16 +1,37 @@
+# stages:
+#   - execute-script
+
+# execute_python_on_issue_update:
+#   stage: execute-script
+#   script:
+#     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE == "web"'
+    
+# execute_python_on_pr_update:
+#   stage: execute-script
+#   script:
+#     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE == "web"'
+
+
 stages:
   - execute-script
 
 execute_python_on_issue_update:
   stage: execute-script
   script:
+    - echo "Exécution du script issue..."
     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
   rules:
     - if: '$CI_PIPELINE_SOURCE == "web"'
-    
+
 execute_python_on_pr_update:
   stage: execute-script
   script:
+    - echo "Exécution du script PR..."
+    - echo "Source du pipeline : $CI_PIPELINE_SOURCE"
     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
   rules:
     - if: '$CI_PIPELINE_SOURCE == "web"'
