--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,31 +1,16 @@
-# stages:
-#   - execute-script
-
-# execute_python_on_issue_update:
-#   stage: execute-script
-#   script:
-#     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
-#   rules:
-#     - if: '$CI_PIPELINE_SOURCE == "web"'
-    
-# execute_python_on_pr_update:
-#   stage: execute-script
-#   script:
-#     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
-#   rules:
-#     - if: '$CI_PIPELINE_SOURCE == "web"'
-
-
-# .gitlab-ci.yml
-
 stages:
-  - sync
+  - execute-script
 
-sync_repositories:
-  stage: sync
+execute_python_on_issue_update:
+  stage: execute-script
   script:
-    - echo "Démarrage de la synchronisation des dépôts..."
-    - python3 /home/gitlab-runner/scripts-secures/script_pr.py
     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
-  only:
-    - main  # Remplacez par la branche sur laquelle vous souhaitez exécuter le pipeline
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "web"'
+    
+execute_python_on_pr_update:
+  stage: execute-script
+  script:
+    - python3 /home/gitlab-runner/scripts-secures/script_pr.py
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "web"'
