--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,13 +16,35 @@
 #     - if: '$CI_PIPELINE_SOURCE == "web"'
 
 
+# stages:
+#   - execute-script
+
+# execute_python_on_issue_update:
+#   stage: execute-script
+#   script:
+#     - git fetch --unshallow || true  # Essayer de récupérer les objets manquants
+#     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE == "web"'
+    
+# execute_python_on_pr_update:
+#   stage: execute-script
+#   script:
+#     - git fetch --unshallow || true  # Essayer de récupérer les objets manquants
+#     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE == "web"'
+
+
 stages:
   - execute-script
+
+variables:
+  GIT_STRATEGY: clone
 
 execute_python_on_issue_update:
   stage: execute-script
   script:
-    - git fetch --unshallow || true  # Essayer de récupérer les objets manquants
     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
   rules:
     - if: '$CI_PIPELINE_SOURCE == "web"'
@@ -30,7 +52,6 @@ execute_python_on_issue_update:
 execute_python_on_pr_update:
   stage: execute-script
   script:
-    - git fetch --unshallow || true  # Essayer de récupérer les objets manquants
     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
   rules:
     - if: '$CI_PIPELINE_SOURCE == "web"'
