--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,40 +1,40 @@
-stages:
-  - execute-script
+# stages:
+#   - execute-script
 
-variables:
-  GIT_STRATEGY: clone
-
-execute_python_on_issue_update:
-  stage: execute-script
-  script:
-    - python3 /home/gitlab-runner/scripts-secures/script_issue.py
-  rules:
-    - if: '$CI_PIPELINE_SOURCE == "web"'
-    - if: '$CI_PIPELINE_SOURCE == "trigger"'
-    
-execute_python_on_pr_update:
-  stage: execute-script
-  script:
-    - python3 /home/gitlab-runner/scripts-secures/script_pr.py
-  rules:
-    - if: '$CI_PIPELINE_SOURCE == "web"'
-    - if: '$CI_PIPELINE_SOURCE == "trigger"'
+# variables:
+#   GIT_STRATEGY: clone
 
 # execute_python_on_issue_update:
 #   stage: execute-script
 #   script:
 #     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
 #   rules:
-#     - if: '$CI_PIPELINE_SOURCE == "web" && $TRIGGERED != "true"'
-#     - if: '$CI_PIPELINE_SOURCE == "trigger" && $TRIGGERED != "true"'
-
+#     - if: '$CI_PIPELINE_SOURCE == "web"'
+#     - if: '$CI_PIPELINE_SOURCE == "trigger"'
+    
 # execute_python_on_pr_update:
 #   stage: execute-script
 #   script:
 #     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
 #   rules:
-#     - if: '$CI_PIPELINE_SOURCE == "web" && $TRIGGERED != "true"'
-#     - if: '$CI_PIPELINE_SOURCE == "trigger" && $TRIGGERED != "true"'
+#     - if: '$CI_PIPELINE_SOURCE == "web"'
+#     - if: '$CI_PIPELINE_SOURCE == "trigger"'
+
+execute_python_on_issue_update:
+  stage: execute-script
+  script:
+    - python3 /home/gitlab-runner/scripts-secures/script_issue.py
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "web" && $TRIGGERED != "true"'
+    - if: '$CI_PIPELINE_SOURCE == "trigger" && $TRIGGERED != "true"'
+
+execute_python_on_pr_update:
+  stage: execute-script
+  script:
+    - python3 /home/gitlab-runner/scripts-secures/script_pr.py
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "web" && $TRIGGERED != "true"'
+    - if: '$CI_PIPELINE_SOURCE == "trigger" && $TRIGGERED != "true"'
 
 # stages:
 #   - execute-script  # Déclarez explicitement le stage "execute-script"
