--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,24 +1,24 @@
-stages:
-  - execute-script
+# stages:
+#   - execute-script
 
-variables:
-  GIT_STRATEGY: clone
+# variables:
+#   GIT_STRATEGY: clone
 
-execute_python_on_issue_update:
-  stage: execute-script
-  script:
-    - python3 /home/gitlab-runner/scripts-secures/script_issue.py
-  rules:
-    - if: '$CI_PIPELINE_SOURCE == "web"'
-    - if: '$CI_PIPELINE_SOURCE == "trigger"'
+# execute_python_on_issue_update:
+#   stage: execute-script
+#   script:
+#     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE == "web"'
+#     - if: '$CI_PIPELINE_SOURCE == "trigger"'
     
-execute_python_on_pr_update:
-  stage: execute-script
-  script:
-    - python3 /home/gitlab-runner/scripts-secures/script_pr.py
-  rules:
-    - if: '$CI_PIPELINE_SOURCE == "web"'
-    - if: '$CI_PIPELINE_SOURCE == "trigger"'
+# execute_python_on_pr_update:
+#   stage: execute-script
+#   script:
+#     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE == "web"'
+#     - if: '$CI_PIPELINE_SOURCE == "trigger"'
 
 # execute_python_on_issue_update:
 #   stage: execute-script
@@ -106,3 +106,27 @@ execute_python_on_pr_update:
 #   rules:
 #     - if: '$CI_PIPELINE_SOURCE == "web" && $TRIGGERED != "true"'
 #     - if: '$CI_PIPELINE_SOURCE == "trigger" && $TRIGGERED != "true"'
+
+
+
+stages:
+  - execute-script
+
+variables:
+  GIT_STRATEGY: clone
+
+execute_python_on_issue_update:
+  stage: execute-script
+  script:
+    - python3 /home/gitlab-runner/scripts-secures/script_issue.py
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "web" && $CI_COMMIT_MESSAGE !~ /\[skip ci\]/'
+    - if: '$CI_PIPELINE_SOURCE == "trigger" && $CI_COMMIT_MESSAGE !~ /\[skip ci\]/'
+    
+execute_python_on_pr_update:
+  stage: execute-script
+  script:
+    - python3 /home/gitlab-runner/scripts-secures/script_pr.py
+  rules:
+    - if: '$CI_PIPELINE_SOURCE == "web" && $CI_COMMIT_MESSAGE !~ /\[skip ci\]/'
+    - if: '$CI_PIPELINE_SOURCE == "trigger" && $CI_COMMIT_MESSAGE !~ /\[skip ci\]/'
