--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -79,54 +79,54 @@
 #     - if: '$CI_PIPELINE_SOURCE == "trigger" && $TRIGGERED != "true"'
 
 
-# variables:
-#   GIT_STRATEGY: clone  # Clone le dépôt à chaque job
+variables:
+  GIT_STRATEGY: clone  # Clone le dépôt à chaque job
 
-# workflow:  # ⚠️ Règle globale pour bloquer les pipelines récursifs
-#   rules:
-#     - if: '$TRIGGERED == "true"'
-#       when: never  # Annule le pipeline si TRIGGERED=true
-#     - when: always  # Sinon, exécute le pipeline
-
-# stages:
-#   - execute-script
-
-# execute_python_on_issue_update:
-#   stage: execute-script
-#   script:
-#     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
-#   rules:
-#     - if: '$CI_PIPELINE_SOURCE == "web" && $TRIGGERED != "true"'
-#     - if: '$CI_PIPELINE_SOURCE == "trigger" && $TRIGGERED != "true"'
-
-# execute_python_on_pr_update:
-#   stage: execute-script
-#   script:
-#     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
-#   rules:
-#     - if: '$CI_PIPELINE_SOURCE == "web" && $TRIGGERED != "true"'
-#     - if: '$CI_PIPELINE_SOURCE == "trigger" && $TRIGGERED != "true"'
-
-
+workflow:  # ⚠️ Règle globale pour bloquer les pipelines récursifs
+  rules:
+    - if: '$TRIGGERED == "true"'
+      when: never  # Annule le pipeline si TRIGGERED=true
+    - when: always  # Sinon, exécute le pipeline
 
 stages:
   - execute-script
-
-variables:
-  GIT_STRATEGY: clone
 
 execute_python_on_issue_update:
   stage: execute-script
   script:
     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "web" && $CI_COMMIT_MESSAGE !~ /\[skip ci\]/'
-    - if: '$CI_PIPELINE_SOURCE == "trigger" && $CI_COMMIT_MESSAGE !~ /\[skip ci\]/'
-    
+    - if: '$CI_PIPELINE_SOURCE == "web" && $TRIGGERED != "true"'
+    - if: '$CI_PIPELINE_SOURCE == "trigger" && $TRIGGERED != "true"'
+
 execute_python_on_pr_update:
   stage: execute-script
   script:
     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "web" && $CI_COMMIT_MESSAGE !~ /\[skip ci\]/'
-    - if: '$CI_PIPELINE_SOURCE == "trigger" && $CI_COMMIT_MESSAGE !~ /\[skip ci\]/'
+    - if: '$CI_PIPELINE_SOURCE == "web" && $TRIGGERED != "true"'
+    - if: '$CI_PIPELINE_SOURCE == "trigger" && $TRIGGERED != "true"'
+
+
+
+# stages:
+#   - execute-script
+
+# variables:
+#   GIT_STRATEGY: clone
+
+# execute_python_on_issue_update:
+#   stage: execute-script
+#   script:
+#     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE == "web" && $CI_COMMIT_MESSAGE !~ /\[skip ci\]/'
+#     - if: '$CI_PIPELINE_SOURCE == "trigger" && $CI_COMMIT_MESSAGE !~ /\[skip ci\]/'
+    
+# execute_python_on_pr_update:
+#   stage: execute-script
+#   script:
+#     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE == "web" && $CI_COMMIT_MESSAGE !~ /\[skip ci\]/'
+#     - if: '$CI_PIPELINE_SOURCE == "trigger" && $CI_COMMIT_MESSAGE !~ /\[skip ci\]/'
