--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -36,31 +36,8 @@
 #     - if: '$CI_PIPELINE_SOURCE == "web" && $TRIGGERED != "true"'
 #     - if: '$CI_PIPELINE_SOURCE == "trigger" && $TRIGGERED != "true"'
 
-# stages:
-#   - execute-script  # Déclarez explicitement le stage "execute-script"
-
-# execute_python_on_issue_update:
-#   stage: execute-script
-#   script:
-#     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
-#   rules:
-#     - if: '$CI_PIPELINE_SOURCE == "web" && $TRIGGERED != "true"'
-#     - if: '$CI_PIPELINE_SOURCE == "trigger" && $TRIGGERED != "true"'
-
-# execute_python_on_pr_update:
-#   stage: execute-script
-#   script:
-#     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
-#   rules:
-#     - if: '$CI_PIPELINE_SOURCE == "web" && $TRIGGERED != "true"'
-#     - if: '$CI_PIPELINE_SOURCE == "trigger" && $TRIGGERED != "true"'
-
-
-variables:
-  GIT_STRATEGY: clone  # Clone le dépôt à chaque job
-
 stages:
-  - execute-script
+  - execute-script  # Déclarez explicitement le stage "execute-script"
 
 execute_python_on_issue_update:
   stage: execute-script
@@ -77,6 +54,29 @@ execute_python_on_pr_update:
   rules:
     - if: '$CI_PIPELINE_SOURCE == "web" && $TRIGGERED != "true"'
     - if: '$CI_PIPELINE_SOURCE == "trigger" && $TRIGGERED != "true"'
+
+
+# variables:
+#   GIT_STRATEGY: clone  # Clone le dépôt à chaque job
+
+# stages:
+#   - execute-script
+
+# execute_python_on_issue_update:
+#   stage: execute-script
+#   script:
+#     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE == "web" && $TRIGGERED != "true"'
+#     - if: '$CI_PIPELINE_SOURCE == "trigger" && $TRIGGERED != "true"'
+
+# execute_python_on_pr_update:
+#   stage: execute-script
+#   script:
+#     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE == "web" && $TRIGGERED != "true"'
+#     - if: '$CI_PIPELINE_SOURCE == "trigger" && $TRIGGERED != "true"'
 
 
 # variables:
