update a file .gitlab-ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -79,14 +79,46 @@
 #     - if: '$CI_PIPELINE_SOURCE == "trigger" && $TRIGGERED != "true"'
 
 
-variables:
-  GIT_STRATEGY: clone  # Clone le dépôt à chaque job
+# variables:
+#   GIT_STRATEGY: clone  # Clone le dépôt à chaque job
 
-workflow:  # ⚠️ Règle globale pour bloquer les pipelines récursifs
+# workflow:  # ⚠️ Règle globale pour bloquer les pipelines récursifs
+#   rules:
+#     - if: '$TRIGGERED == "true"'
+#       when: never  # Annule le pipeline si TRIGGERED=true
+#     - when: always  # Sinon, exécute le pipeline
+
+# stages:
+#   - execute-script
+
+# execute_python_on_issue_update:
+#   stage: execute-script
+#   script:
+#     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE == "web" && $TRIGGERED != "true"'
+#     - if: '$CI_PIPELINE_SOURCE == "trigger" && $TRIGGERED != "true"'
+
+# execute_python_on_pr_update:
+#   stage: execute-script
+#   script:
+#     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE == "web" && $TRIGGERED != "true"'
+#     - if: '$CI_PIPELINE_SOURCE == "trigger" && $TRIGGERED != "true"'
+
+
+
+
+
+variables:
+  GIT_STRATEGY: clone
+
+workflow:
   rules:
     - if: '$TRIGGERED == "true"'
-      when: never  # Annule le pipeline si TRIGGERED=true
-    - when: always  # Sinon, exécute le pipeline
+      when: never
+    - when: always
 
 stages:
   - execute-script
@@ -94,6 +126,7 @@ stages:
 execute_python_on_issue_update:
   stage: execute-script
   script:
+    - export TRIGGERED="true"  # Définir TRIGGERED avant d'exécuter le script
     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
   rules:
     - if: '$CI_PIPELINE_SOURCE == "web" && $TRIGGERED != "true"'
@@ -102,31 +135,8 @@ execute_python_on_issue_update:
 execute_python_on_pr_update:
   stage: execute-script
   script:
+    - export TRIGGERED="true"  # Définir TRIGGERED avant d'exécuter le script
     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
   rules:
     - if: '$CI_PIPELINE_SOURCE == "web" && $TRIGGERED != "true"'
     - if: '$CI_PIPELINE_SOURCE == "trigger" && $TRIGGERED != "true"'
-
-
-
-# stages:
-#   - execute-script
-
-# variables:
-#   GIT_STRATEGY: clone
-
-# execute_python_on_issue_update:
-#   stage: execute-script
-#   script:
-#     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
-#   rules:
-#     - if: '$CI_PIPELINE_SOURCE == "web" && $CI_COMMIT_MESSAGE !~ /\[skip ci\]/'
-#     - if: '$CI_PIPELINE_SOURCE == "trigger" && $CI_COMMIT_MESSAGE !~ /\[skip ci\]/'
-    
-# execute_python_on_pr_update:
-#   stage: execute-script
-#   script:
-#     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
-#   rules:
-#     - if: '$CI_PIPELINE_SOURCE == "web" && $CI_COMMIT_MESSAGE !~ /\[skip ci\]/'
-#     - if: '$CI_PIPELINE_SOURCE == "trigger" && $CI_COMMIT_MESSAGE !~ /\[skip ci\]/'
