--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -111,6 +111,37 @@
 
 
 
+# variables:
+#   GIT_STRATEGY: clone
+
+# workflow:
+#   rules:
+#     - if: '$TRIGGERED == "true"'
+#       when: never
+#     - when: always
+
+# stages:
+#   - execute-script
+
+# execute_python_on_issue_update:
+#   stage: execute-script
+#   script:
+#     - export TRIGGERED="true"  # Définir TRIGGERED avant d'exécuter le script
+#     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE == "web" && $TRIGGERED != "true"'
+#     - if: '$CI_PIPELINE_SOURCE == "trigger" && $TRIGGERED != "true"'
+
+# execute_python_on_pr_update:
+#   stage: execute-script
+#   script:
+#     - export TRIGGERED="true"  # Définir TRIGGERED avant d'exécuter le script
+#     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE == "web" && $TRIGGERED != "true"'
+#     - if: '$CI_PIPELINE_SOURCE == "trigger" && $TRIGGERED != "true"'
+
+
 variables:
   GIT_STRATEGY: clone
 
@@ -126,17 +157,17 @@ stages:
 execute_python_on_issue_update:
   stage: execute-script
   script:
-    - export TRIGGERED="true"  # Définir TRIGGERED avant d'exécuter le script
+    - export TRIGGERED="true"
     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "web" && $TRIGGERED != "true"'
+    - if: '$CI_PIPELINE_SOURCE == "web" && $TRIGGERED != "true" && $CI_COMMIT_REF_NAME == "main"'
     - if: '$CI_PIPELINE_SOURCE == "trigger" && $TRIGGERED != "true"'
 
 execute_python_on_pr_update:
   stage: execute-script
   script:
-    - export TRIGGERED="true"  # Définir TRIGGERED avant d'exécuter le script
+    - export TRIGGERED="true"
     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "web" && $TRIGGERED != "true"'
+    - if: '$CI_PIPELINE_SOURCE == "web" && $TRIGGERED != "true" && $CI_COMMIT_REF_NAME == "main"'
     - if: '$CI_PIPELINE_SOURCE == "trigger" && $TRIGGERED != "true"'
