--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -142,8 +142,40 @@
 #     - if: '$CI_PIPELINE_SOURCE == "trigger" && $TRIGGERED != "true"'
 
 
+# variables:
+#   GIT_STRATEGY: clone
+
+# workflow:
+#   rules:
+#     - if: '$TRIGGERED == "true"'
+#       when: never
+#     - when: always
+
+# stages:
+#   - execute-script
+
+# execute_python_on_issue_update:
+#   stage: execute-script
+#   script:
+#     - export TRIGGERED="true"
+#     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE == "web" && $TRIGGERED != "true" && $CI_COMMIT_REF_NAME == "main"'
+#     - if: '$CI_PIPELINE_SOURCE == "trigger" && $TRIGGERED != "true"'
+
+# execute_python_on_pr_update:
+#   stage: execute-script
+#   script:
+#     - export TRIGGERED="true"
+#     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE == "web" && $TRIGGERED != "true" && $CI_COMMIT_REF_NAME == "main"'
+#     - if: '$CI_PIPELINE_SOURCE == "trigger" && $TRIGGERED != "true"'
+
+
 variables:
   GIT_STRATEGY: clone
+  TRIGGERED: "false"  # Valeur par défaut
 
 workflow:
   rules:
@@ -157,17 +189,19 @@ stages:
 execute_python_on_issue_update:
   stage: execute-script
   script:
-    - export TRIGGERED="true"
+    - echo "Début de l'exécution du script pour la mise à jour des issues"
+    - export TRIGGERED="true"  # Définir TRIGGERED avant d'exécuter le script
     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "web" && $TRIGGERED != "true" && $CI_COMMIT_REF_NAME == "main"'
+    - if: '$CI_PIPELINE_SOURCE == "web" && $TRIGGERED != "true"'
     - if: '$CI_PIPELINE_SOURCE == "trigger" && $TRIGGERED != "true"'
 
 execute_python_on_pr_update:
   stage: execute-script
   script:
-    - export TRIGGERED="true"
+    - echo "Début de l'exécution du script pour la mise à jour des PR"
+    - export TRIGGERED="true"  # Définir TRIGGERED avant d'exécuter le script
     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
   rules:
-    - if: '$CI_PIPELINE_SOURCE == "web" && $TRIGGERED != "true" && $CI_COMMIT_REF_NAME == "main"'
+    - if: '$CI_PIPELINE_SOURCE == "web" && $TRIGGERED != "true"'
     - if: '$CI_PIPELINE_SOURCE == "trigger" && $TRIGGERED != "true"'
