update a file .gitlab-ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -209,42 +209,11 @@
 
 
 
-# stages:
-#   - execute-script
-
-# variables:
-#   GIT_STRATEGY: clone
-
-# execute_python_on_issue_update:
-#   stage: execute-script
-#   script:
-#     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
-#   rules:
-#     - if: '$CI_PIPELINE_SOURCE == "web"'
-#     - if: '$CI_PIPELINE_SOURCE == "trigger"'
-#     - if: '$CI_COMMIT_BRANCH == "main"'  # Exemple de condition pour une branche spécifique
-    
-# execute_python_on_pr_update:
-#   stage: execute-script
-#   script:
-#     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
-#   rules:
-#     - if: '$CI_PIPELINE_SOURCE == "web"'
-#     - if: '$CI_PIPELINE_SOURCE == "trigger"'
-#     - if: '$CI_COMMIT_BRANCH == "main"'  # Exemple de condition pour une branche spécifique
-
-
-
 stages:
   - execute-script
 
 variables:
   GIT_STRATEGY: clone
-
-debug_job:
-  stage: execute-script
-  script:
-    - echo "Pipeline Source: $CI_PIPELINE_SOURCE"
 
 execute_python_on_issue_update:
   stage: execute-script
@@ -252,10 +221,16 @@ execute_python_on_issue_update:
     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
   rules:
     - if: '$CI_PIPELINE_SOURCE == "web"'
-
+    - if: '$CI_PIPELINE_SOURCE == "trigger"'
+    - if: '$CI_COMMIT_BRANCH == "main"'  # Exemple de condition pour une branche spécifique
+    
 execute_python_on_pr_update:
   stage: execute-script
   script:
     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
   rules:
     - if: '$CI_PIPELINE_SOURCE == "web"'
+    - if: '$CI_PIPELINE_SOURCE == "trigger"'
+    - if: '$CI_COMMIT_BRANCH == "main"'  # Exemple de condition pour une branche spécifique
+
+
