update a file .gitlab-ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -235,6 +235,33 @@
 
 
 
+# stages:
+#   - execute-script
+
+# variables:
+#   GIT_STRATEGY: clone
+
+# debug_job:
+#   stage: execute-script
+#   script:
+#     - echo Pipeline Source: $CI_PIPELINE_SOURCE
+
+# execute_python_on_issue_update:
+#   stage: execute-script
+#   script:
+#     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE == "web"'
+
+# execute_python_on_pr_update:
+#   stage: execute-script
+#   script:
+#     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
+#   rules:
+#     - if: '$CI_PIPELINE_SOURCE == "web"'
+
+
+
 stages:
   - execute-script
 
@@ -244,7 +271,7 @@ variables:
 debug_job:
   stage: execute-script
   script:
-    - echo Pipeline Source: $CI_PIPELINE_SOURCE
+    - echo "Pipeline Source: $CI_PIPELINE_SOURCE"
 
 execute_python_on_issue_update:
   stage: execute-script
@@ -252,6 +279,8 @@ execute_python_on_issue_update:
     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
   rules:
     - if: '$CI_PIPELINE_SOURCE == "web"'
+    - if: '$CI_PIPELINE_SOURCE == "trigger"'  # Ajouté pour les triggers
+    - if: '$CI_COMMIT_BRANCH == "main"'  # Ajouté pour la branche principale
 
 execute_python_on_pr_update:
   stage: execute-script
@@ -259,3 +288,5 @@ execute_python_on_pr_update:
     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
   rules:
     - if: '$CI_PIPELINE_SOURCE == "web"'
+    - if: '$CI_PIPELINE_SOURCE == "trigger"'  # Ajouté pour les triggers
+    - if: '$CI_COMMIT_BRANCH == "main"'  # Ajouté pour la branche principale
