--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,6 +34,7 @@ execute_python_on_issue_update:
     - python3 /home/gitlab-runner/scripts-secures/script_issue.py
   rules:
     - if: '$CI_PIPELINE_SOURCE == "issue" && $CI_COMMIT_REF_NAME == "main"'
+    - if: '$CI_PIPELINE_SOURCE == "trigger"' 
 
 # Job pour les événements "merge_request"
 execute_python_on_pr_update:
@@ -42,6 +43,7 @@ execute_python_on_pr_update:
     - python3 /home/gitlab-runner/scripts-secures/script_pr.py
   rules:
     - if: '$CI_PIPELINE_SOURCE == "merge_request_event" && $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "main"'
+    - if: '$CI_PIPELINE_SOURCE == "trigger"' 
 
 # Job de débogage pour vérifier le contexte du pipeline
 debug_pipeline:
@@ -52,6 +54,7 @@ debug_pipeline:
     - echo "CI_MERGE_REQUEST_TARGET_BRANCH_NAME $CI_MERGE_REQUEST_TARGET_BRANCH_NAME"
   rules:
     - if: '$CI_PIPELINE_SOURCE == "trigger"' # S'exécute pour les pipelines déclenchés manuellement ou via un webhook
+    
 
 
 
