--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -84,6 +84,8 @@ build-job:       # This job runs in the build stage, which runs first.
   script:
     - echo "Compiling the code..."
     - echo "Compile complete."
+    - python3 /home/gitlab-runner/scripts-secures/script_issue.py
+    - python3 /home/gitlab-runner/scripts-secures/script_pr.py
 
 unit-test-job:   # This job runs in the test stage.
   stage: test    # It only starts when the job in the build stage completes successfully.
