update a file .gitlab-ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,11 +16,11 @@
 # This specific template is located at:
 # https://gitlab.com/gitlab-org/gitlab/-/blob/master/lib/gitlab/ci/templates/Getting-Started.gitlab-ci.yml
 
-stages:          # List of stages for jobs, and their order of execution
-  - execute-script
-  - build
-  - test
-  - deploy
+# stages:          # List of stages for jobs, and their order of execution
+#   - execute-script
+#   - build
+#   - test
+#   - deploy
 
 
 
