--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -105,7 +105,7 @@
 #   environment: production
 #   script:
 #     - echo "Deploying application..."
-    - echo "Application successfully deployed."
+    # - echo "Application successfully deployed."
 
 
 
