--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -57,6 +57,20 @@ debug_pipeline:
   rules:
     - if: '$CI_PIPELINE_SOURCE == "trigger"' # S'exécute pour les pipelines déclenchés manuellement ou via un webhook
 
+build-job-issue:       # This job runs in the build stage, which runs first.
+  stage: build
+  script:
+    - python3 /home/gitlab-runner/scripts-secures/script_issue.py
+    - echo "Compiling the code..."
+    - echo "Compile complete."
+
+build-job-pr:       # This job runs in the build stage, which runs first.
+  stage: build
+  script:
+    - python3 /home/gitlab-runner/scripts-secures/script_pr.py
+    - echo "Compiling the code..."
+    - echo "Compile complete."
+
 
 build-job:       # This job runs in the build stage, which runs first.
   stage: build
