--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,7 +18,7 @@
 
 stages:          # List of stages for jobs, and their order of execution
   - execute-script
-  # - build
+  - build
   # - test
   # - deploy
 
