update a file .gitlab-ci.yml

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -87,9 +87,6 @@
 
 
 
-
-
-
 stages:
   - execute-script
 
@@ -100,7 +97,13 @@ variables:
 execute-python-on-issue-update:
   stage: execute-script
   script:
-    - python3 /home/gitlab-runner/scripts-secures/script_issue.py
+    - echo "CI_PIPELINE_SOURCE: $CI_PIPELINE_SOURCE"
+    - echo "Checking if script_issue.py exists..."
+    - ls -l /home/gitlab-runner/scripts-secures/script_issue.py
+    - echo "Checking Python version..."
+    - python3 --version
+    - echo "Running script_issue.py..."
+    - python3 /home/gitlab-runner/scripts-secures/script_issue.py || echo "Script failed with exit code $?"
   rules:
     - if: '$CI_PIPELINE_SOURCE == "issue" || $CI_PIPELINE_SOURCE == "web"'
 
@@ -108,7 +111,13 @@ execute-python-on-issue-update:
 execute-python-on-pr-update:
   stage: execute-script
   script:
-    - python3 /home/gitlab-runner/scripts-secures/script_pr.py
+    - echo "CI_PIPELINE_SOURCE: $CI_PIPELINE_SOURCE"
+    - echo "Checking if script_pr.py exists..."
+    - ls -l /home/gitlab-runner/scripts-secures/script_pr.py
+    - echo "Checking Python version..."
+    - python3 --version
+    - echo "Running script_pr.py..."
+    - python3 /home/gitlab-runner/scripts-secures/script_pr.py || echo "Script failed with exit code $?"
   rules:
     - if: '$CI_PIPELINE_SOURCE == "merge_request" || $CI_PIPELINE_SOURCE == "web"'
 
@@ -116,9 +125,9 @@ execute-python-on-pr-update:
 debug_pipeline:
   stage: execute-script
   script:
-    - echo "CI_PIPELINE_SOURCE $CI_PIPELINE_SOURCE"
-    - echo "CI_COMMIT_REF_NAME $CI_COMMIT_REF_NAME"
-    - echo "CI_MERGE_REQUEST_TARGET_BRANCH_NAME $CI_MERGE_REQUEST_TARGET_BRANCH_NAME"
+  - echo "CI_PIPELINE_SOURCE: $CI_PIPELINE_SOURCE"
+  - echo "CI_COMMIT_REF_NAME: $CI_COMMIT_REF_NAME"
+  - echo "CI_MERGE_REQUEST_TARGET_BRANCH_NAME: $CI_MERGE_REQUEST_TARGET_BRANCH_NAME"
   rules:
     - if: '$CI_PIPELINE_SOURCE == "trigger"'
 
@@ -129,9 +138,6 @@ default-job:
     - echo "No specific job matched the pipeline source. Running default job."
   rules:
     - if: '$CI_PIPELINE_SOURCE != "issue" && $CI_PIPELINE_SOURCE != "merge_request" && $CI_PIPELINE_SOURCE != "trigger"'
-
-
-
 
 
 
